# PrimProv

./: CMakeLists.txt  multi-projects.code-workspace
archivos51/: CMakeLists.txt  main.cpp
archivos51/include/: Estudiante.h
archivos51/src/: Estudiante.cpp
educaplus/: CMakeLists.txt  main.cpp
educaplus/include/: Alumno.h  Curso.h  Docente.h  Leccion.h  Usuario.h
educaplus/src/: Alumno.cpp  Curso.cpp  Docente.cpp  Leccion.cpp  Usuario.cpp
intersedes/: CMakeLists.txt  main.cpp
intersedes/include/: Basketbolista.h  Deportista.h  Futbolista.h  Nadador.h
intersedes/src/: Basketbolista.cpp  Deportista.cpp  Futbolista.cpp  Nadador.cpp
parcial2/: CMakeLists.txt  main.cpp
parcial2/include/: EnanoGuerrero.h  RunaFuego.h  RunaMagica.h  RunaPiedra.h
parcial2/src/: EnanoGuerrero.cpp  RunaFuego.cpp  RunaPiedra.cpp
punteros/: CMakeLists.txt  main.cpp  transacciones.txt
punteros/include/: Cuenta.h  Persona.h
punteros/src/: Cuenta.cpp  Persona.cpp
